--- a/views/signup.pug
+++ b/views/signup.pug
@@ -2,12 +2,12 @@ extends layout
 
 block content
     .inner
-        form.form(action="/signup" method='POST')
+        form.form(action="/users/signup" method='POST')
             h2 Register
             label(for="email") Email
             input(type="text" name="email" required)
             label(for="password") Password 
             input(type="password" name="password" required)
             label(for="password-confirm") Confirm Password
-            input(type="password-confirm" name="password-confirm" required)
+            input(type="password" name="password-confirm" required)
             button(type="submit" value="Register →")
