product form submission

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,6 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  a(href="/users/signin") sign in 
-  a(href="/users/signup") sign up
-  a(href="/users/products") post products
+  a(href="/users/signin") sign in | 
+  a(href="/users/signup") sign up | 
+  a(href="/users/products") post products |
