--- a/views/signup.pug
+++ b/views/signup.pug
@@ -10,4 +10,4 @@ block content
             input(type="password" name="password" required)
             label(for="password-confirm") Confirm Password
             input(type="password" name="password-confirm" required)
-            button(type="submit" value="Register →")
+            input.button(type="submit" value="Register →")
