posting to db locally

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,4 @@ block content
   p Welcome to #{title}
   a(href="/users/signin") sign in | 
   a(href="/users/signup") sign up | 
-  a(href="/users/products") post products |
+  a(href="/productAdd") post products |
