--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,18 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+
+    block messages
+      if locals.flashes
+        //- pre= h.dump(locals.flashes)
+        .inner
+          .flash-messages
+            - const categories = Object.keys(locals.flashes)
+            each category in categories
+              each message in flashes[category]
+                .flash(class=`flash--${category}`)
+                  p.flash__text!= message
+                  button.flash__remove(onClick="this.parentElement.remove()") &times;
     block content
   footer
     block footer
